--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "frontend",
+  "name": "color-consensus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --open --hot"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development --open --hot",
+    "build": "webpack --config ./webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "",
