draw border when selected

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "core-js": "^2.6.3",
     "jquery": "^3.3.1",
     "mustache": "^3.0.1",
     "popper.js": "^1.14.7",
