--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,6 @@
     "mustache": "^3.0.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-selectable-fast": "^2.2.1"
+    "react-dom": "^16.7.0"
   }
 }
