--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "cross-env BABEL_ENV=dev webpack-dev-server --open --config webpack.dev.js",
+    "build": "cross-env BABEL_ENV=prod webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -14,30 +14,34 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
-    ]
+    ],
+    "env": {
+      "prod": {
+        "plugins": [
+          "transform-remove-console"
+        ]
+      }
+    }
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-brands-svg-icons": "^5.7.0",
     "@fortawesome/free-regular-svg-icons": "^5.7.0",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "bootstrap": "^4.2.1",
+    "clean-webpack-plugin": "^1.0.1",
     "core-js": "^2.6.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
     "mustache": "^3.0.1",
@@ -46,6 +50,11 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-selectable-fast": "^2.2.1"
+    "react-selectable-fast": "^2.2.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
 }
