--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,11 +57,11 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "jest": "^24.5.0",
-    "redux-devtools-extension": "^2.13.8"
+    "jest": "^24.5.0"
   }
 }
