--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,19 +49,21 @@
     "react": "^16.7.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-selectable-fast": "^2.2.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1",
-    "redux-devtools-extension": "^2.13.8"
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
+    "axios-mock-adapter": "^1.16.0",
     "jest": "^24.5.0"
   }
 }
