--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "mustache": "^3.0.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
+    "react-awesome-popover": "^3.1.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.1",
