--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,7 @@
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "mustache": "^3.0.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
@@ -57,6 +57,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
+    "webapp-webpack-plugin": "^2.7.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
