--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
+    "glamor": "^2.20.40",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.0",
     "mustache": "^3.0.1",
