--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
     "start": "cross-env BABEL_ENV=dev webpack-dev-server --open --config webpack.dev.js",
     "build": "cross-env BABEL_ENV=prod webpack --config webpack.prod.js"
   },
